txt-output/40.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: there are several ways to fix the program. No oracle given.            
v23 = \f g a -> (f a, f 1, g a, g True)                

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\40.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\40.hs:6:24:
    No instance for (Num Bool)
      arising from the literal `1' at ill-typed\40.hs:6:24
    Possible fix: add an instance declaration for (Num Bool)
    In the first argument of `f', namely `1'
    In the expression: f 1
    In the expression: (f a, f 1, g a, g True)


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\40.hs, ill-typed\40.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\40.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\40.hs:6:25: error:
    * No instance for (Num Bool) arising from the literal `1'
    * In the first argument of `f', namely `1'
      In the expression: f 1
      In the expression: (f a, f 1, g a, g True)
  |
6 | v23 = \f g a -> (f a, f 1, g a, g True)                
  |                         ^
